# BharatBiz-AI

./: README.md  test_customer_service.py
Backend/app/: main.py
ai-agent/src/bharatbiz_ai_multi_agent_system_for_indian_smes/: crew.py  main.py
ai-agents/: README.md
ai_agents/: README.md  business_coordinator_agent.py  customer_service_agent.py  inventory_manager_agent.py  pyproject.toml
ai_agents/business_coordinator/: README.md  pyproject.toml  report.md
ai_agents/business_coordinator/src/business_coordinator/: crew.py  main.py
ai_agents/business_coordinator/src/business_coordinator/config/: agents.yaml  tasks.yaml
ai_agents/src/bharatbiz_ai_multi_agent_system_for_indian_smes/: main.py
ai_agents/src/bharatbiz_ai_multi_agent_system_for_indian_smes/config/: agents.yaml  tasks.yaml
backend/: .env  README.md  bharatbiz.db  requirements.txt
backend/app/: firebase_utils.py  main.py
backend/app/api/endpoints/: auth.py  products.py
backend/app/models/: database.py  db_models.py  sample_data.py
demo/: README.md
docs/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.jsx  firebase.js  index.css  vite-env.d.js
frontend/src/pages/: BusinessCoordinator.jsx  Chat.jsx  Dashboard.jsx  Index.jsx  InventoryManager.jsx  Login.jsx  Products.jsx
