[project]
name = "bharatbiz_ai_multi_agent_system_for_indian_smes"
version = "0.1.0"
description = "bharatbiz_ai_multi_agent_system_for_indian_smes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
bharatbiz_ai_multi_agent_system_for_indian_smes = "bharatbiz_ai_multi_agent_system_for_indian_smes.main:run"
run_crew = "bharatbiz_ai_multi_agent_system_for_indian_smes.main:run"
train = "bharatbiz_ai_multi_agent_system_for_indian_smes.main:train"
replay = "bharatbiz_ai_multi_agent_system_for_indian_smes.main:replay"
test = "bharatbiz_ai_multi_agent_system_for_indian_smes.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
