[project]
name = "business_coordinator"
version = "0.1.0"
description = "Business-Coordinator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
business_coordinator = "business_coordinator.main:run"
run_crew = "business_coordinator.main:run"
train = "business_coordinator.main:train"
replay = "business_coordinator.main:replay"
test = "business_coordinator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
